--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                      <span class="light">Kenneth Watkins </span> 
+                      <span class="light">Alexa Lenior </span> 
                 </a>
             </div>
 
@@ -117,17 +117,11 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2 class="loud">Contact Me</h2>
                 <p>Feel free to contact me anytime!</p>
-                <p><a href="mailto:kenneth@blue1647.com">kenneth@blue1647.com</a>
+                <p><a href="mailto:kenneth@blue1647.com">alexalenior2@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/kennethjulian" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/virtica" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/virtica" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                        <a href="https://github.com/alenior2" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                 </ul>
             </div>
