--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About me</h2>
- <p> Hello!  I am a developer in Chicago. I like to listen to music and play laser tag.</p>
+ <p> Hello!  I am a highschool student in Chicago attending Kenwood Academy High School. I apart of a Lego Robotics Team, and Girls Scouts. I like to listen to music,play tennis, watch youtube videos.</p>
             </div>
             </div>
         </div>
@@ -104,8 +104,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2 class="loud">My Portfolio</h2>
                     <p>Here is a list of my projects</p>
-                    <a href="/" class="btn btn-default btn-lg">Flappy Boxes</a>
-                    <a href="/" class="btn btn-default btn-lg">CTA App</a>
+                    <a href="/" class="btn btn-default btn-lg">Codecademy</a>
                 </div>
             </div>
         </div>
