--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About me</h2>
- <p> Hello!  I am a highschool student in Chicago attending Kenwood Academy High School. I apart of a Lego Robotics Team, and Girls Scouts. I like to listen to music,play tennis, watch youtube videos.</p>
+ <p> Hello!  I am a highschool student in Chicago attending Kenwood Academy High School. I am a part of an Lego Robotics Team, and Girls Scouts. I like to listen to music,play tennis, watch youtube videos.</p>
             </div>
             </div>
         </div>
